editando-trabajo-final

--- a/carrito.html
+++ b/carrito.html
@@ -10,6 +10,8 @@
     <meta name="keywords" content="Ropa, Zapatillas, Nike, Adidas, Jordan.">
     <!-- Favicon -->
     <link rel="shortcut icon" href="./Galery/Icon/Favicon/Logo.png" type="image/x-icon">
+    <!-- Link toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!-- Link Css -->
     <link rel="stylesheet" href="./CSS/style.css">
     <!-- Link Bootstrap -->
@@ -86,13 +88,12 @@
             <p id="buy-cart" class="buy-cart disabled">Muchas gracias por tu compra. <i class="bi bi-emoji-sunglasses-fill"></i></p>
         </div>
     </main>
-   
-
-
-
-
     
-   <!-- Link Js -->
+    <!-- Link Toastify -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!-- Sweet Alert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Link Js -->
     <script src="./JS/carrito.js"></script>
     <!-- Link Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
