--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="keywords" content="Ropa, Zapatillas, Nike, Adidas, Jordan.">
     <!-- Favicon -->
     <link rel="shortcut icon" href="./Galery/Icon/Favicon/Logo.png" type="image/x-icon">
+    <!-- Link toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!-- Link Css -->
     <link rel="stylesheet" href="./CSS/style.css">
     <!-- Link Bootstrap -->
@@ -68,13 +70,10 @@
         <div id="container-products"  class="container-products">
         </div>
     </main>
-   
-
-
-
-
     
-   <!-- Link Js -->
+    <!-- Link Toastify -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!-- Link Js -->
     <script src="./JS/app.js"></script>
     <!-- Link Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
