--- a/formulario.html
+++ b/formulario.html
@@ -10,16 +10,8 @@
     <meta name="keywords" content="Ropa, Zapatillas, Nike, Adidas, Jordan.">
     <!-- Favicon -->
     <link rel="shortcut icon" href="./Galery/Icon/Favicon/Logo.png" type="image/x-icon">
-    <!-- Link toastify -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!-- Link Css -->
     <link rel="stylesheet" href="./CSS/style.css">
-    <!-- Link Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -52,36 +44,35 @@
                     <span id="number-cart" class="number-cart">0</span>
                 </a>
             </div>
-        </div> 
-        <!-- Navbar -->
-        <nav class="contain-nav">
-            <ul class="menu-nav">
-                <li><button id="Zapatillas" class="button-category">Zapatillas</button></li>
-                <li><button id="Pantalones" class="button-category">Pantalones</button></li>
-                <li><button id="Todos" class="button-category active">Todos los productos</button></li>
-                <li><button id="Remeras" class="button-category">Remeras</button></li>
-                <li><button id="Buzos" class="button-category">Buzos</button></li>
-            </ul> 
-        </nav>
+        </div>
     </header>
     <!-- Main -->
-    <main class="main-content d-flex flex-column container-fluid">
-        <h1 id="principal-title" class="principal-title">Todos los productos</h1>
-        <div id="container-products"  class="container-products">
-        </div>
+    <main class="form-box">
+        <form action="" method="post" id="form">
+            <div class="form">
+                <h2 class="form-title">Registro</h2>
+                <div class="form-group">
+                    <label for="">Nombre</label>
+                    <input class="input-form" type="text" name="" id="name" placeholder="Federico Sala"><span class="bar"></span>
+                </div>
+                <div class="form-group">
+                    <label for="">Email</label>
+                    <input class="input-form" type="email" name="" id="email" placeholder="StyleOg@urbano.com"><span class="bar"></span>
+                </div>
+                <div class="form-group">
+                    <label for="">Contraseña</label>
+                    <input class="input-form" type="password" name="" id="password" placeholder="Min 8 caracteres"><span class="bar"></span>
+                </div>
+                <button type="submit" class="form-button" >Registrate</button>
+                <p class="warnings" id="warnings"></p>
+            </div>
+        </form>
     </main>
     
-    <!-- Link Toastify -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!-- Sweet Alert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Link Js -->
-    <script src="./JS/app.js"></script>
-    <!-- Link Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
+    <script src="./JS/formulario.js"></script>
 </body>
 
 </html>
